--- a/style.css
+++ b/style.css
@@ -32,20 +32,27 @@ main {
 }
 
 .one {
-    margin-top: 50%;
+    margin-top: 55%;
 }
 
 .two {
 }
 
 .logo {
-    align-self: flex-start;
-    width: 40%;
-    top: 30px;
+    width: 50%;
+    position: absolute;
+    top: 1.5rem;
+    left: 0;
 }
 
 h1, p {
     text-align: center;
+}
+
+h1 {
+    font-size: 27px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
 }
 
 p {
@@ -56,11 +63,26 @@ button {
     border: none;
     border-radius: 40px;
     color: hsl(257, 40%, 49%);
+    cursor: pointer;
     display: block;
     margin: 0 auto 70px;
     padding: 10px 60px;
 }
 
+button:hover {
+    background-color: hsl(300, 69%, 71%);
+    color: white;
+}
+
 .fab {
     padding: 10px;
+}
+
+.fab:hover {
+    cursor: pointer;
+    color: hsl(300, 69%, 71%);
+}
+
+.icons {
+    margin-bottom: 20px;
 }
