--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ main {
 .logo {
     width: 50%;
     position: absolute;
-    top: 1.5rem;
+    top: 2.5rem;
     left: 0;
 }
 
@@ -53,6 +53,7 @@ h1 {
     font-size: 27px;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
+    line-height: 150%;
 }
 
 p {
@@ -60,12 +61,12 @@ p {
 }
 
 button {
+    background-color: white;
     border: none;
     border-radius: 40px;
     color: hsl(257, 40%, 49%);
     cursor: pointer;
-    display: block;
-    margin: 0 auto 70px;
+    margin-bottom: 70px;
     padding: 10px 60px;
 }
 
@@ -85,4 +86,73 @@ button:hover {
 
 .icons {
     margin-bottom: 20px;
+}
+
+@media (min-width: 1025px) {
+
+
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 50px;
+        width: 90%;
+    }
+
+    .logo {
+        width: 15%;
+    }
+
+    .one {
+        margin-top: 0;
+    }
+
+    .two {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        justify-content: center;
+        position: relative;
+    }
+
+    h1, p {
+        text-align: left;
+        margin: 0;
+    }
+
+    h1 {
+        font-size: 38px;
+        line-height: 130%;
+        margin-bottom: 30px;
+    }
+
+    p {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    button {
+        align-self: flex-start;
+        padding: 15px 70px;
+    }
+
+    .icons {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+    }
+
+    .fab {
+        font-size: 25px;
+    }
+
+}
+
+@media (min-width: 1274px) {
+    h1 {
+        font-size: 50px;
+    }
+
+    .logo {
+        top: 2rem;
+    }
 }
